# perchance_api

./: .gitignore  Cargo.toml  README.md
src/: error.rs  generator.rs  imagegenerator.rs  lib.rs  main.rs  textgenerator.rs  utils.rs
